--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <div class="container">
         <h1>Sebastian Chamorro</h1>
         <ul>
-            <li><a href="#">login de acceso</a></li>
-            <li><a href="#">basket</a></li>
+            <li><a id="ej1" href="#">login de acceso</a></li>
+            <li><a id="ej2" href="#">basket</a></li>
         </ul>
     </div>
     <div id="caja"></div>
-    <script src="js/index.js"></script>
+    <script type="module" src="js/index.js"></script>
 </body>
 </html>
